Add full cycle dockerfile and docker compose with grpcUi
